--- a/app/src/main/res/layout/fragment_crime.xml
+++ b/app/src/main/res/layout/fragment_crime.xml
@@ -35,4 +35,10 @@
         android:layout_height="wrap_content"
         android:text="@string/crime_solved_lable" />
 
+    <Button
+        android:id="@+id/time_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/time_button" />
+
 </LinearLayout>
