--- a/app/src/main/res/layout/activity_fragment.xml
+++ b/app/src/main/res/layout/activity_fragment.xml
@@ -3,8 +3,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CrimeActivity"
+    tools:context=".CrimeListActivity"
     android:id="@+id/fragment_container"
     android:layout_margin="10dp">
 
+    <Button
+        android:id="@+id/add_button"
+        style="@android:style/Widget.Holo.Button.Small"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:fontFamily="sans-serif"
+        android:lineSpacingExtra="10sp"
+        android:text="@string/add_crime"
+        android:textSize="18sp"
+        android:typeface="sans" />
 </FrameLayout>
