--- a/app/src/main/res/layout/activity_fragment.xml
+++ b/app/src/main/res/layout/activity_fragment.xml
@@ -9,13 +9,14 @@
 
     <Button
         android:id="@+id/add_button"
-        style="@android:style/Widget.Holo.Button.Small"
+        style="@style/Widget.AppCompat.Button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:fontFamily="sans-serif"
         android:lineSpacingExtra="10sp"
         android:text="@string/add_crime"
+        android:textAllCaps="false"
         android:textSize="18sp"
-        android:typeface="sans" />
+        android:textStyle="italic" />
 </FrameLayout>
